# AI-Bio-T-Cell

./: .gitattributes  .gitignore  CITATION.cff  DESCRIPTION  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md
.github/workflows/: R-ci.yml  python-ci.yml
datasets/: .gitignore  README.md  데이터_카탈로그.csv
datasets/01_reaptec_atlas/: README.md
datasets/01_reaptec_atlas/metadata/: dryad_manifest.tsv
datasets/01_reaptec_atlas/raw/: README.md
datasets/01_reaptec_atlas/scripts/: download_dryad.sh  download_processed.sh  install_r_bridge.R  rds_to_h5ad.R  unzip_and_organize.sh  verify_checksums.sh  verify_h5ad.py
datasets/02_project_DEG_timeseries/: README.md
datasets/03_daniel2022_exhaustion/: README.md
datasets/04_10x_multiome_pbmc/: README.md
datasets/05_tabula_sapiens_T/: README.md
datasets/06_vdjdb/: README.md
datasets/07_iedb/: README.md
datasets/08_10x_vdj_T/: README.md
datasets/09_berttcr_cancer/: README.md
datasets/10_hest1k/: README.md
datasets/11_tcga_til/: README.md
datasets/12_barkley2022_pancancer/: README.md
datasets/13_codex_hubmap/: README.md
datasets/14_encode_chip/: README.md
datasets/15_gtex_eqtl/: README.md
datasets/16_gwas_catalog_immune/: README.md
datasets/17_fantom5_cage/: README.md
datasets/18_roadmap_epigenomics/: README.md
datasets/19_opentargets/: README.md
docs/: architecture.md  index.md
experiments/_template/: README.md  config.yaml
notebooks/R/: 01_seurat_exhaustion.Rmd
notebooks/python/: 01_exploration_reaptec.ipynb
obsidian/: README.md
obsidian/.obsidian/: app.json  core-plugins.json  daily-notes.json  templates.json
obsidian/00_Index/: Home.md
obsidian/10_Concepts/: AI_Virtual_Cells.md  ReapTEC_Enhancer_Atlas.md  T_Cell_Exhaustion.md
obsidian/20_Topics/: Topic1_Waddington_Attractor.md  Topic2_TCR_Foundation_Model.md  Topic3_TME_Spatial.md  Topic4_Enhancer_Regulatory_Network.md
obsidian/30_Daily/: 2026-05-18.md  2026-05-22.md  2026-05-25.md
obsidian/40_Meetings/: _kickoff_template.md
obsidian/50_Literature/: Bunne2024_AI_Virtual_Cells.md  Daniel2022_Exhaustion.md  Oguchi2024_ReapTEC.md
obsidian/60_Methods/: DNABERT2_Embedding.md  Flow_Matching.md  GNN_Enhancer_Network.md  R_Manual.md  R_Python_Bridge.md  ReapTEC_Pipeline.md  Unbalanced_Schrodinger_Bridge.md
obsidian/70_Decisions/: ADR-001_Tooling_Python_R_Obsidian.md
obsidian/80_TechNotes/: Memory_and_Swap_Management.md  R_Manual.md  R_Package_Management.md  htop_Monitoring.md
obsidian/_templates/: Daily.md  Literature.md  Meeting.md  Topic.md
references/: 목록.xlsx
reports/deliverables/: environment_design.md  url_verification_report.md  산출물_안내.md  요약슬라이드_RIKEN_T-Cell_협업.html  평가보고서_RIKEN_T-Cell_협업.md
scripts/: README.md  pull_from_github.sh  push_to_github.ps1  push_to_github.sh  push_to_github_win_en.sh  r_quiet.sh  setup_linux_remote.sh  setup_miniforge.sh  verify_dataset_urls.py
src/R/R/: enhancer_analysis.R  (+2 more)
tests/R/: test-enhancer.R
tests/python/: test_registry.py  test_utils.py
(+18 files in other folders)
