[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibio"
version = "0.1.0"
description = "AI Virtual Cells for T-Cell immunology - RIKEN collaboration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Sojung Kim", email = "sojung.kim.nca@gmail.com" }
]
keywords = ["single-cell", "T-cell", "flow-matching", "diffusion-model", "GNN", "immunology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11.4",         # 3.12 first supported patch
  "scikit-learn>=1.4",
  "anndata>=0.10",
  "scanpy>=1.10",
  "mudata>=0.2",
  "pyarrow>=15",
  "requests>=2.31",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
ml = [
  "torch>=2.4",
  "torchvision>=0.19",
  "torch-geometric>=2.5",
  "transformers>=4.44",
  "tokenizers>=0.20",
  "triton>=3.0",          # required by DNABERT-2 custom kernels
  "einops>=0.8",
  "torchcfm>=1.0",
  "lightning>=2.4",
  "wandb>=0.18",
  "diffusers>=0.30",       # Topic 4 perturbation
]
bridge = [
  # R <-> Python interop and genomic IO needed for ReapTEC .rds workflow
  "anndata2ri>=1.3",       # R SCE -> Python AnnData
  "rpy2>=3.5",             # call R from Python (rare, but useful)
  "pyfaidx>=0.7",          # FASTA random access for enhancer sequences
  "pyranges>=0.0.129",     # BED/GTF arithmetic on the Python side
  "pybigwig>=0.3",         # bigWig signal extraction
  "openpyxl>=3.1",         # read Dryad DataS1/3/5 .xlsx
]
genome = [
  "biopython>=1.83",
  "pysam>=0.22",
  "intervaltree>=3.1",
]
spatial = [
  "spatialdata>=0.1",
  "squidpy>=1.5",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.10",
  "jupyterlab>=4.1",
  "ipykernel>=6.29",
  "nbstripout>=0.7",
  "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/wildcat842/AI-Bio-T-Cell"
Issues = "https://github.com/wildcat842/AI-Bio-T-Cell/issues"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-dir]
"" = "src/python"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --cov=aibio --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
